[gd_scene load_steps=7 format=2]

[ext_resource path="res://logic/managers/ToolManager.gd" type="Script" id=1]
[ext_resource path="res://logic/interface/RaiseLandTool.gd" type="Script" id=2]
[ext_resource path="res://logic/interface/LowerLandTool.gd" type="Script" id=3]
[ext_resource path="res://logic/interface/FLoodBarrierTool.gd" type="Script" id=4]
[ext_resource path="res://logic/interface/PipeTool.gd" type="Script" id=5]
[ext_resource path="res://logic/interface/PumpTool.gd" type="Script" id=6]

[node name="ToolManager" type="Node"]
script = ExtResource( 1 )

[node name="RaiseLandTool" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="LowerLandTool" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="FloodBarrierTool" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="PipeTool" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="PumpTool" type="Node2D" parent="."]
script = ExtResource( 6 )
